# flood-monitoring

./: .gitignore  README.md  TODO.txt  pyproject.toml
documentation/: example_nb.ipynb  forecast_station.ipynb  measure_stations.ipynb  station_class.ipynb  test.py
documentation/.ipynb_checkpoints/: forecast_station-checkpoint.ipynb  measure_stations-checkpoint.ipynb  station_class-checkpoint.ipynb
src/flood_monitoring/: __init__.py  forecast.py  river_flow.py  river_level.py  station.py  temperature.py  tidal_level.py
tests/: test_forecast.py  test_generic.py  test_river_flow.py  test_river_level.py  test_station.py  test_temperature.py  test_tidal_level.py
